Increase scope for when we create a token for the service account
Since it needs more permissions