@@ -9,7 +9,6 @@ import com.google.api.client.json.jackson2.JacksonFactory;
 import java.io.File;
 import java.io.IOException;
 import java.security.GeneralSecurityException;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
@@ -37,9 +36,9 @@ public class AuthService {
   // this should always match exactly what the UI requests, so our tests represent actual user
   // behavior:
   private List<String> userLoginScopes =
-      Arrays.asList("openid", "email", "profile", "https://www.googleapis.com/auth/cloud-billing");
+      List.of("openid", "email", "profile", "https://www.googleapis.com/auth/cloud-billing");
   private List<String> directAccessScopes =
-      Arrays.asList(
+      List.of(
           "https://www.googleapis.com/auth/bigquery",
           "https://www.googleapis.com/auth/devstorage.full_control");
   private NetHttpTransport httpTransport;
